fix: add overflow and margin styles to body for improved layout

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,4 @@
 
-body, html {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-}
-
 body{
   background-color: #121212;
   color: #FFFFFF;
